# company-search-engine

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
company_search_crawler/: README.md  output_company_list.csv  scrapy.cfg
company_search_crawler/company_search_crawler/: items.py  middlewares.py  pipelines.py  repositories.py  settings.py
company_search_crawler/company_search_crawler/spiders/: scrapy_company.py  scrapy_company_search_spider.py
company_search_engine/: .coveragerc  .editorconfig  .gitignore  CONTRIBUTORS.txt  LICENSE  README.rst  local.yml  manage.py  production.yml
company_search_engine/.envs/.local/: .django  .postgres
company_search_engine/company_search_engine/: conftest.py
company_search_engine/company_search_engine/templates/: base.html
company_search_engine/company_search_engine/users/: admin.py  apps.py  urls.py
company_search_engine/company_search_engine/users/tests/: test_forms.py  test_tasks.py  test_views.py
company_search_engine/compose/production/traefik/: traefik.toml
company_search_engine/config/: celery_app.py  urls.py  wsgi.py
company_search_engine/config/settings/: base.py  local.py  production.py  test.py
company_search_engine/docs/: Makefile  conf.py  index.rst  make.bat
company_search_engine/requirements/: production.txt
mongo/docker-entrypoint-initdb.d/: create-users.js
task_runners/: tasks.py
web_api/company/: models.py  serializers.py  urls.py  views.py
web_api/company/fixtures/: initial_data.json
web_api/company/migrations/: 0001_initial.py
web_api/config/: settings.py  urls.py
(+1 files in other folders)
