[tool.poetry]
name = "company-search-engine"
version = "0.1.0"
description = ""
authors = ["shimakaze-git <shimakaze.soft+github@googlemail.com>"]

[tool.poetry.dependencies]
python = "3.7.3"
django = "2.2.9"
celery = "4.4.0"
django-environ = "^0.4.5"
djongo = "^1.2.38"
django-localflavor = "^2.2"
djangorestframework = "^3.11.0"
djangorestframework-camel-case = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
cookiecutter = "^1.7.0"
drf-yasg = "^1.17.0"
django-extensions = "^2.2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
